Work in progress

--- a/app/views/cities/_city.html.slim
+++ b/app/views/cities/_city.html.slim
@@ -1,10 +1,4 @@
-div id="#{dom_id city}"
-  p
-    strong Name:
-    =< city.name
-  p
-    strong Population:
-    =< city.population
-  p
-    strong Parent:
-    =< city.parent_id
+td
+  = city.name
+td
+  = city.population
